// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideBar> on load renders correctly  1`] = `
<DocumentFragment>
  <div
    class="_spectrum_d43d2 _spectrum_60105 _spectrum--darkest_acf7f _spectrum--large_38267 _spectrum_5be2e _spectrum--medium_5be2e _spectrum--large_5be2e _spectrum--darkest_5be2e _spectrum--dark_5be2e _spectrum--light_5be2e _spectrum--lightest_5be2e"
    dir="ltr"
    lang="en-US"
    style="isolation: isolate; color-scheme: dark;"
  >
    <ul
      class="SideNav"
    >
      <li
        class="SideNav-item"
      >
        <a
          aria-current="page"
          class="SideNav-itemLink is-selected"
          href="#/"
        >
          Home
        </a>
      </li>
      <li
        class="SideNav-item"
      >
        <a
          class="SideNav-itemLink"
          href="#/about"
        >
          About this Apps
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<SideBar> on sandbox selection renders correctly 1`] = `
<DocumentFragment>
  <ul
    class="SideNav"
  >
    <li
      class="SideNav-item"
    >
      <a
        aria-current="page"
        class="SideNav-itemLink is-selected"
        href="#/"
      >
        Home
      </a>
    </li>
    <li
      class="SideNav-item"
    >
      <a
        class="SideNav-itemLink"
        href="#/previewer"
      >
        Previewer
      </a>
    </li>
    <li
      class="SideNav-item"
    >
      <a
        class="SideNav-itemLink"
        href="#/about"
      >
        About this Apps
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
